slash commands with auto pop