@@ -58,6 +58,11 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.28.0</version>
+        </dependency>
     </dependencies>
 
 
@@ -110,11 +115,9 @@
                             <macSign>true</macSign>
                             <macSigningKeyUserName>Developer ID Application: Chad Arimura (Y6H3T7M96S)</macSigningKeyUserName>
                             <macEntitlements>/Users/CARIMURA/workspace/certs/entitlements.plist</macEntitlements>
-                            <!--
                             <javaOptions>
-                                <option>-enable-preview</option>
+                                <option>--enable-native-access=ALL-UNNAMED</option>
                             </javaOptions>
-                            -->
                         </configuration>
                     </execution>
                 </executions>
